fixed terminal text alignment. (remove center from hero css)

--- a/css/style.css
+++ b/css/style.css
@@ -236,7 +236,6 @@ section {
     background-size: cover;
     display: grid;
     place-content: center;
-    text-align: center;
 }
 
 /* Section title */
